fixed with new sidebar overlapping and table design changes

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -7413,14 +7413,6 @@ body.update-scroll-hidden {
         }
     }
 }
-
-.on-setting-page.aside-setting,
-.on-user-page.aside-setting {
-    #content-wrapper {
-        padding-right: 240px;
-    }
-}
-
 .gst-sidebar-open.on-setting-page.aside-setting {
     #content-wrapper {
         padding-right: 0;
@@ -7513,14 +7505,6 @@ body.update-scroll-hidden {
         }
     }
 }
-
-.on-setting-page.aside-setting,
-.on-user-page.aside-setting {
-    #content-wrapper {
-        padding-right: 240px;
-    }
-}
-
 .gst-sidebar-open.on-setting-page.aside-setting {
     #content-wrapper {
         padding-right: 0;
